{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 1016,
  "lineage": "86cda6e2-23e6-c8cd-0e49-ab75cea908ae",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/regions/us-central1/instanceGroups/sag-module-instance-group-managed",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-06-14T06:43:18.801-07:00",
            "enable_cdn": false,
            "fingerprint": "Osi_TLxJdDg=",
            "generated_id": 1187190613697920281,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/healthChecks/sag-airbyte-basic-check"
            ],
            "id": "projects/mystic-impulse-384712/global/backendServices/sag-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sag-backend-service",
            "port_name": "airbyte",
            "project": "mystic-impulse-384712",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/backendServices/sag-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.lb.google_compute_health_check.default_lb",
            "module.mig.google_compute_health_check.default",
            "module.mig.google_compute_instance_template.default",
            "module.mig.google_compute_region_instance_group_manager.module_group",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "grafana_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/regions/us-central1/instanceGroups/sag-module-instance-group-managed",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-06-14T06:43:18.909-07:00",
            "enable_cdn": false,
            "fingerprint": "5IKRR6Tare4=",
            "generated_id": 1012607455905217817,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/healthChecks/sag-grafana-basic-check"
            ],
            "id": "projects/mystic-impulse-384712/global/backendServices/sag-grafana-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sag-grafana-backend-service",
            "port_name": "grafana",
            "project": "mystic-impulse-384712",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/backendServices/sag-grafana-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.lb.google_compute_health_check.grafana_healthcheck",
            "module.mig.google_compute_health_check.default",
            "module.mig.google_compute_instance_template.default",
            "module.mig.google_compute_region_instance_group_manager.module_group",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.190.114.107",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-06-14T06:42:07.738-07:00",
            "id": "projects/mystic-impulse-384712/global/addresses/sag-lb-ipv4",
            "name": "sag-lb-ipv4",
            "prefix_length": 0,
            "project": "mystic-impulse-384712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/addresses/sag-lb-ipv4"
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/mystic-impulse-384712/global/forwardingRules/sag-http-content-rule",
            "ip_address": "35.190.114.107",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sag-http-content-rule",
            "port_range": "80-80",
            "project": "mystic-impulse-384712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/forwardingRules/sag-http-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/targetHttpProxies/test-proxy"
          },
          "dependencies": [
            "module.lb.google_compute_backend_service.backend_service",
            "module.lb.google_compute_backend_service.grafana_service",
            "module.lb.google_compute_global_address.static",
            "module.lb.google_compute_health_check.default_lb",
            "module.lb.google_compute_health_check.grafana_healthcheck",
            "module.lb.google_compute_target_http_proxy.default",
            "module.lb.google_compute_url_map.default",
            "module.mig.google_compute_health_check.default",
            "module.mig.google_compute_instance_template.default",
            "module.mig.google_compute_region_instance_group_manager.module_group",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/mystic-impulse-384712/global/forwardingRules/sag-https-content-rule",
            "ip_address": "35.190.114.107",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sag-https-content-rule",
            "port_range": "443-443",
            "project": "mystic-impulse-384712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/forwardingRules/sag-https-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/targetHttpsProxies/sag-https-lb-proxy"
          },
          "dependencies": [
            "module.lb.google_compute_backend_service.backend_service",
            "module.lb.google_compute_backend_service.grafana_service",
            "module.lb.google_compute_global_address.static",
            "module.lb.google_compute_health_check.default_lb",
            "module.lb.google_compute_health_check.grafana_healthcheck",
            "module.lb.google_compute_managed_ssl_certificate.airbyte_cert",
            "module.lb.google_compute_managed_ssl_certificate.grafana_cert",
            "module.lb.google_compute_target_https_proxy.https_default",
            "module.lb.google_compute_url_map.default",
            "module.mig.google_compute_health_check.default",
            "module.mig.google_compute_instance_template.default",
            "module.mig.google_compute_region_instance_group_manager.module_group",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-14T06:43:55.123-07:00",
            "id": "projects/mystic-impulse-384712/global/targetHttpProxies/test-proxy",
            "name": "test-proxy",
            "project": "mystic-impulse-384712",
            "proxy_bind": false,
            "proxy_id": 4529054153605151476,
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/targetHttpProxies/test-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/urlMaps/airbyte-lb"
          },
          "dependencies": [
            "module.lb.google_compute_backend_service.backend_service",
            "module.lb.google_compute_backend_service.grafana_service",
            "module.lb.google_compute_health_check.default_lb",
            "module.lb.google_compute_health_check.grafana_healthcheck",
            "module.lb.google_compute_url_map.default",
            "module.mig.google_compute_health_check.default",
            "module.mig.google_compute_instance_template.default",
            "module.mig.google_compute_region_instance_group_manager.module_group",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-14T06:43:55.113-07:00",
            "id": "projects/mystic-impulse-384712/global/targetHttpsProxies/sag-https-lb-proxy",
            "name": "sag-https-lb-proxy",
            "project": "mystic-impulse-384712",
            "proxy_bind": false,
            "proxy_id": 213973890830203636,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/targetHttpsProxies/sag-https-lb-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/sslCertificates/sag-airbyte-ssl-cert",
              "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/sslCertificates/sag-grafana-ssl-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/urlMaps/airbyte-lb"
          },
          "dependencies": [
            "module.lb.google_compute_managed_ssl_certificate.airbyte_cert",
            "module.lb.google_compute_managed_ssl_certificate.grafana_cert",
            "module.lb.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-14T06:43:42.412-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/backendServices/sag-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "CTeTVzdnNkk=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "airbyte.sag.airbyte.systems"
                ],
                "path_matcher": "sag-airbyte"
              },
              {
                "description": "",
                "hosts": [
                  "grafana.sag.airbyte.systems"
                ],
                "path_matcher": "sag-grafana"
              }
            ],
            "id": "projects/mystic-impulse-384712/global/urlMaps/airbyte-lb",
            "map_id": 2221956872207104737,
            "name": "airbyte-lb",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/backendServices/sag-backend-service",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "sag-airbyte",
                "path_rule": [],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/backendServices/sag-grafana-backend-service",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "sag-grafana",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "mystic-impulse-384712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/urlMaps/airbyte-lb",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.google_compute_backend_service.backend_service",
            "module.lb.google_compute_backend_service.grafana_service",
            "module.lb.google_compute_health_check.default_lb",
            "module.lb.google_compute_health_check.grafana_healthcheck",
            "module.mig.google_compute_health_check.default",
            "module.mig.google_compute_instance_template.default",
            "module.mig.google_compute_region_instance_group_manager.module_group",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.mig",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-prom3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-14T06:42:21.272-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mystic-impulse-384712/global/firewalls/allow-prom3",
            "log_config": [],
            "name": "allow-prom3",
            "network": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/networks/sag-airbyte-vpc1",
            "priority": 1000,
            "project": "mystic-impulse-384712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/firewalls/allow-prom3",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-14T06:42:21.104-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mystic-impulse-384712/global/firewalls/sag-firewall-externalssh",
            "log_config": [],
            "name": "sag-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/networks/sag-airbyte-vpc1",
            "priority": 1000,
            "project": "mystic-impulse-384712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/firewalls/sag-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mystic-impulse-384712/global/networks/sag-airbyte-vpc1",
            "mtu": 0,
            "name": "sag-airbyte-vpc1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "mystic-impulse-384712",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/networks/sag-airbyte-vpc1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "airbyte_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-14T06:42:21.323-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/mystic-impulse-384712/regions/us-central1/routers/airbyte-router",
            "name": "airbyte-router",
            "network": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/networks/sag-airbyte-vpc1",
            "project": "mystic-impulse-384712",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/regions/us-central1/routers/airbyte-router"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "airbyte_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "mystic-impulse-384712/us-central1/airbyte-router/airbyte-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "airbyte-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "mystic-impulse-384712",
            "region": "us-central1",
            "router": "airbyte-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.airbyte_router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-14T06:42:21.093-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/mystic-impulse-384712/regions/us-central1/subnetworks/sag-airbyte-private-subnet-1",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "sag-airbyte-private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/global/networks/sag-airbyte-vpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mystic-impulse-384712",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mystic-impulse-384712/regions/us-central1/subnetworks/sag-airbyte-private-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}